--- a/index.html
+++ b/index.html
@@ -452,7 +452,46 @@
                         <span>Google</span>
                     </div>
                     <!-- end: Testimonials item-->
-                    
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>"Médica espetacular, com conhecimento técnico e um lado humano inigualável! Tenho profunda admiração por essa profissional!"</p>
+                        <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
+                        <span>FERNANDA SILVA</span>
+                        <span>Google</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>"Excelente profissional e é um amor de pessoa,super atenciosa com os pacientes 💟✨"</p>
+                        <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
+                        <span>GLAUCE SANTOS</span>
+                        <span>Google</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>"Muito atenciosa e sábia, demonstra saber tudo com muita propriedade. Uma médica maravilhosa!!"</p>
+                        <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
+                        <span>MARINA</span>
+                        <span>Google</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>"excelente profissional, explica tudo direitinho com calma, muito atenciosa."</p>
+                        <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
+                        <span>ERIKA MARQUES</span>
+                        <span>Google</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>"Excelente consulta! Respondeu todas as minhas dúvidas e explicou calmamente o tratamento! Super indico!"</p>
+                        <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
+                        <span>BEATRIZ REIS</span>
+                        <span>Google</span>
+                    </div>
+                    <!-- end: Testimonials item-->
                 </div>
                 
                 <!-- end: Testimonials -->
