--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                                 <br/>
                                 <br>
                                 <h2 class="m-b-10">Onde Atendo</h2>
-                                <div class="carousel client-logos" data-items="1" data-autoplay="true" style="left: -25px !important;">
+                                <div class=" client-logos" data-items="1" data-autoplay="true" style="left: -25px !important;">
                                     <div style="border: 2px solid white; padding: 20px; border-radius: 5px;">
                                         <h3>CLÍNICA CENTERMED (DIAMANTINA)</h3>
                                         <p><svg style="width: 1.2rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" fill="rgb(176, 115, 105)"/></svg> Rua do Fogo, 400, Centro - Diamantina-MG <span>(ao lado da Igreja da Luz)</span></p>
